added a line on the body part of the paragraph

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <h2>About Me</h2>
         <p>I'm an AI student passionate about technology, machine learning, 
        and building practical solutions with code. I enjoy learning by 
-       creating real-world projects and improving my development skills.</p>
+       creating real-world projects and improving my development skills.
+        developing and improving digital skills</p>
     </div>
 
     <div class="section">
