linked with projects file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Welcome! I'm Engineer Waweru</h1>
+    <p>
+      Visit the <a href="projects.html">View My Projects</a> for more information and insights.
+    </p>
 
     <div class="section">
         <h2>About Me</h2>
