initial update on projects.html

--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,44 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Engineer-waweru| Machine learning & AI Student</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Welcome! I'm Engineer Waweru Pojects Page</h1>
+    <p>
+      Visit the <a href="index.html">View My home page</a> To see whats new
+    </p>
+
+    <div class="section">
+        <h2>Project 1</h2>
+        <p>I'm an AI student passionate about technology, machine learning, 
+       and building practical solutions with code. I enjoy learning by 
+       creating real-world projects and improving my development skills.
+        developing and improving digital skills</p>
+    </div>
+
+    <div>
+    <b>Building a Sustainable Ecosystem</b>
+    <p>Learn how to leverage technology to build a sustainable ecosystem environment</p>
+    </div>
+
+    <div class="section">
+        <h2>What I'm Learning</h2>
+        <ul>
+            <li>Machine learning Fundamentals</li>
+            <li>Git and Github</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2>Links</h2>
+        <ul>
+            <li><a href="https://github.com/engineer-Waweru">My GitHub Profile</a></li>
+        </ul>
+    </div>
+</body>
+</html>
